apps/aiyou_stack/aiyou-fastapi-services/server_log_frozen_v4.txt
Traceback (most recent call last):
  File "/Users/pikeymickey/aiyou-stack/ShadowTag-v2/bin/n-autoresearch/Kosmos/BioAgents-server", line 42, in <module>
    from src.n-autoresearch/Kosmos/BioAgents.agents.autoresearch import n-autoresearch/Kosmos/BioAgents, LLMProvider, AgentTier
  File "/Users/pikeymickey/aiyou-stack/ShadowTag-v2/src/n-autoresearch/Kosmos/BioAgents/agents/autoresearch.py", line 1
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
